# whatsvelte-rust

./: .gitattributes  .gitignore  LICENSE  MakeFile  Makefile  README.md  package-lock.json  package.json  release.bat  release.sh  rust-toolchain.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  phase-1-api-surface.md  phase-2-frontend.md
rust-backend/: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  clippy.toml  release.toml  rust-toolchain.toml
rust-backend/agent_docs/: binary_size_ci.md  debugging.md  e2e_testing.md  feature_implementation.md  protocol_architecture.md
rust-backend/examples/: metrics.rs  observability.rs
rust-backend/http_clients/ureq-client/: Cargo.toml
rust-backend/http_clients/ureq-client/src/: lib.rs
rust-backend/scripts/: regenerate-proto-desc.sh
rust-backend/scripts/ci/: binary_size_report.py  (+1 more)
rust-backend/src/: appstate_sync.rs  bot.rs  cache.rs  cache_config.rs  cache_store.rs  client.rs  flush_scope.rs  handshake.rs  history_sync.rs  jid_utils.rs  keepalive.rs  lib.rs  lid_pn_cache.rs  main.rs  media.rs  mediaconn.rs  msg_secret_buffer.rs  pair.rs  pair_code.rs  pdo.rs  pending_device_sync.rs  portable_cache.rs  prekeys.rs  receipt.rs  resend_rate_limiter.rs  retry.rs  runtime_impl.rs  send.rs  sender_key_device_cache.rs  session.rs  spam_report.rs  sync_task.rs  test_utils.rs  unified_session.rs  upload.rs  usync.rs  version.rs
rust-backend/tests/: async_trait_boxed_future_compat.rs  handshake_integration.rs
rust-backend/tests/bench-integration/: Cargo.toml
rust-backend/tests/bench-integration/src/: counting_alloc.rs  main.rs
rust-backend/transports/tokio-transport/: Cargo.toml
rust-backend/transports/tokio-transport/src/: lib.rs
rust-backend/wacore/: Cargo.toml
rust-backend/wacore/appstate/benches/: appstate_benchmark.rs
rust-backend/wacore/appstate/src/: decode.rs  encode.rs  errors.rs  hash.rs  keys.rs  lib.rs  patch_decode.rs  processor.rs  schemas.rs
rust-backend/wacore/benches/: appstate_sync_benchmark.rs  history_sync_benchmark.rs  message_utils_benchmark.rs  reporting_token_benchmark.rs  send_receive_benchmark.rs
rust-backend/wacore/binary/: Cargo.toml
rust-backend/wacore/binary/benches/: binary_benchmark.rs  jid_benchmark.rs
rust-backend/wacore/binary/src/: attrs.rs  builder.rs  consts.rs  decoder.rs  encoder.rs  error.rs  jid.rs  lib.rs  marshal.rs  node.rs  tokens.json  util.rs  zlib_pool.rs
rust-backend/wacore/binary/tests/: attrs_inline_alloc.rs
rust-backend/wacore/derive/: Cargo.toml
rust-backend/wacore/derive/src/: lib.rs
rust-backend/wacore/libsignal/: Cargo.toml
rust-backend/wacore/libsignal/benches/: libsignal_benchmark.rs
rust-backend/wacore/libsignal/src/: lib.rs
rust-backend/wacore/libsignal/src/core/: address.rs  curve.rs  mod.rs
rust-backend/wacore/libsignal/src/core/curve/: curve25519.rs  utils.rs
rust-backend/wacore/libsignal/src/crypto/: aes_cbc.rs  aes_ctr.rs  aes_gcm.rs  error.rs  hash.rs  mod.rs  provider.rs
rust-backend/wacore/libsignal/src/protocol/: consts.rs  crypto.rs  error.rs  group_cipher.rs  identity_key.rs  mod.rs  protocol.rs  ratchet.rs  sender_keys.rs  session.rs  session_cipher.rs  storage.rs  stores.rs  timestamp.rs
rust-backend/wacore/libsignal/src/protocol/ratchet/: keys.rs  params.rs
rust-backend/wacore/libsignal/src/protocol/state/: bundle.rs  mod.rs  prekey.rs  session.rs  signed_prekey.rs
rust-backend/wacore/libsignal/src/protocol/storage/: traits.rs
rust-backend/wacore/libsignal/src/store/: mod.rs  record_helpers.rs  sender_key_name.rs
rust-backend/wacore/libsignal/tests/: session_divergence.rs
rust-backend/wacore/noise/: Cargo.toml
rust-backend/wacore/noise/benches/: noise_benchmark.rs
rust-backend/wacore/noise/src/: edge_routing.rs  error.rs  framing.rs  handshake.rs  lib.rs  state.rs  test_util.rs
rust-backend/wacore/noise/tests/: cert_chain_verify.rs
rust-backend/wacore/src/: adv.rs  appstate_sync.rs  bot_message.rs  client.rs  client_profile.rs  comment.rs  companion_reg.rs  event.rs  history_sync.rs  ib.rs  lib.rs  media_retry.rs  message_edit.rs  message_processing.rs  msg_secret.rs  net.rs  pair.rs  poll.rs  prekeys.rs  reaction.rs  request.rs  runtime.rs  secret_enc_addon.rs  send.rs  session.rs  sticker_pack.rs  sync_marker.rs  telemetry.rs  time.rs  usync.rs  version.rs  webp.rs  xml.rs  zip.rs
rust-backend/wacore/src/client/: context.rs
rust-backend/wacore/src/handshake/: mod.rs
rust-backend/wacore/src/iq/: abprops.rs  blocklist.rs  business.rs  chatstate.rs  contacts.rs  devices.rs  dirty.rs  groups.rs  keepalive.rs  mediaconn.rs  mod.rs  node.rs  passive.rs  prekeys.rs  privacy.rs  profile.rs  props.rs  spam_report.rs  spec.rs  tctoken.rs  usync.rs
rust-backend/wacore/src/protocol/: keepalive.rs  mod.rs  nack.rs  retry.rs
rust-backend/wacore/src/send/: dm.rs  encrypt.rs  group.rs  peer.rs  resolved_devices.rs
rust-backend/wacore/src/stanza/: business.rs  call.rs  devices.rs  groups.rs  message.rs  mod.rs  notification.rs  receipt.rs
rust-backend/wacore/src/store/: ab_props.rs  cache.rs  commands.rs  device.rs  in_memory.rs  mod.rs  persistence.rs  signal_cache.rs  traits.rs
rust-backend/wacore/src/types/: call.rs  events.rs  jid.rs  lid_pn.rs  mod.rs  presence.rs  spam_report.rs  user.rs
rust-backend/wacore/tests/: appstate_external_mutations_test.rs  appstate_mac_test.rs  binary_protocol_test.rs  jid_test.rs  noise_handshake_test.rs  wire_enum_serde_test.rs
rust-backend/waproto/: .gitignore  Cargo.toml
rust-backend/waproto/src/: whatsapp.desc  whatsapp.desc.sha256  whatsapp.proto
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  dto.rs  error.rs  lib.rs  main.rs  session.rs
src-tauri/src/commands/: auth.rs  chat_settings.rs  contacts.rs  media.rs  messaging.rs  mod.rs  newsletters.rs
svelte-frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
svelte-frontend/src/: App.svelte  app.css  main.ts
(+174 files in other folders)
