[package]
name = "whatsvelte-rust"
version = "1.2.0"
description = "Tauri desktop app wrapping the whatsapp-rust library"
edition = "2024"
rust-version = "1.85"

# Tauri v2 convention: the app logic lives in a lib so mobile targets can reuse
# it; main.rs is a thin shim. crate-type covers desktop + mobile linking.
[lib]
name = "whatsapp_integrate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
# Native file picker (send-media) and scoped fs access (staging in-memory blobs
# — pastes/recordings — to a temp file so send_media can read them by path).
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Open received documents in the OS default app (no in-app renderer).
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
# Must match the major version whatsapp-rust uses, so the Receiver<Arc<Event>>
# type from ChannelEventHandler lines up across the crate boundary.
async-channel = "2"
# Inline media thumbnails (jpeg_thumbnail bytes) are base64'd for the UI.
base64 = "0.22"

# The vendored protocol library, pulled in by path. Default features bring the
# SQLite store, Tokio WebSocket transport, ureq HTTP client and Tokio runtime.
whatsapp-rust = { path = "../rust-backend" }
