[package]
name = "whatsapp-rust-ureq-http-client"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Ureq-based HTTP client implementation for whatsapp-rust"

[features]
default = []
# Skip TLS certificate verification (for testing with mock servers)
danger-skip-tls-verify = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
wacore = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
