[package]
name = "whatsapp-rust-tokio-transport"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Tokio-based WebSocket transport for whatsapp-rust"

[features]
default = []
# Skip TLS certificate verification (for testing with mock servers)
danger-skip-tls-verify = []

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "alloc", "std"] }
http = "1.4.2"
log = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"] }
tokio-websockets = { version = "0.13.0", features = [
  "client",
  "rustls-bring-your-own-connector",
  "rand",
  "ring",
] }
wacore = { workspace = true }
webpki-roots = "1.0.4"

[lints]
workspace = true
