[package]
name = "wacore-libsignal"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Signal Protocol implementation for the WhatsApp platform"

[dependencies]
aes = { workspace = true }
arrayref = "0.3.9"
async-lock = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cbc = { version = "0.2", features = ["alloc"] }
chrono = { workspace = true, features = ["now"] }
ctr = { workspace = true }
curve25519-dalek = "5.0.0-rc.0"
derive_more = { version = "2.1.0", features = ["from", "into", "try_from"] }
displaydoc = "0.2.5"
ghash = "0.6.0"
hex = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["alloc"] }
sha1 = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6.1"
thiserror = { workspace = true }
uuid = { workspace = true }
waproto = { workspace = true }
x25519-dalek = { version = "3.0.0-rc.0", features = ["static_secrets"] }

[dev-dependencies]
divan = { workspace = true }
futures = { workspace = true, features = ["executor"] }

[[bench]]
name = "libsignal_benchmark"
harness = false

[lints]
workspace = true
