[package]
name = "wacore-noise"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Noise Protocol implementation for WhatsApp with AES-256-GCM"

[lib]
crate-type = ["rlib"]

[features]
# Exposes `wacore_noise::test_util` (cert-chain bytes builder, etc.) so
# downstream crates can share fixtures with the unit tests in this crate.
test-util = []
# Skips XEdDSA signature verification of the server's Noise cert chain.
# Required for the e2e mock server, which uses self-signed certs that
# can't be verified against the real WA root key. NEVER enable in prod.
danger-skip-cert-chain-verify = []

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
hkdf = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
wacore-binary = { workspace = true }
wacore-libsignal = { workspace = true }
waproto = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
prost = { workspace = true }
waproto = { workspace = true }

[[bench]]
name = "noise_benchmark"
harness = false

[lints]
workspace = true
